--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,14 @@
 {
   "manifest_version": 3,
   "name": "ColorCheck",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Eyedropper and 3-color palette extractor for web designers",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"
   ],
+  "options_page": "options.html",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
